SERVER-101044 Do not log misleading 'may have mixed-schema data' message (#32797)

GitOrigin-RevId: bceb0101201eb7b95e639aa1204b24341771a65a